# browsers-sdk

./: .gitignore  Makefile  README.md  python-client-config.yaml
.github/workflows/: e2e.yml  generate.yml  publish-npm.yml  publish-python.yml
fern/: fern.config.json  generators.yml  openapi.json
sdks/python/: README.md  pyproject.toml
sdks/python/browsers_sdk/: __init__.py
sdks/python/browsers_sdk/api/default/: branch_session.py  create_session.py  get_recording_events_raw.py  get_session.py  get_session_by_name.py  get_session_connect_url.py  list_recordings.py  list_sessions.py  login.py  pause_session.py  resume_session.py  share_session.py  sign_up.py  start_recording.py  stop_recording.py  stop_session.py  update_session_metadata.py
sdks/python/browsers_sdk/models/: __init__.py  message.py  metadata_update_request.py  metadata_update_request_metadata_type_0.py  recording_info.py  recording_list.py  session.py  session_list.py
sdks/typescript/: BrowsersApi.ts  index.ts  package-lock.json  package.json  tsconfig.json  tsup.config.js
sdks/typescript/browsers_sdk/: main.ts  types.d.ts
sdks/typescript/models/: MetadataUpdateRequest.ts  RecordingInfo.ts  RecordingList.ts  Session.ts  SessionList.ts
sdks/typescript/services/: DefaultService.ts
tests/: e2e_python.py  e2e_ts.mjs
