[project]
name = "browsers-sdk"
version = "0.1.0"
description = "browsers plugin for morphcloud"
authors = [
    { name = "Andrei Betlen", email = "abetlen@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "morphcloud>=0.1.0",
    "click>=8.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."morphcloud.sdk_plugins"] 
browsers = "browsers_sdk:register_sdk_plugin"

[tool.hatch.build.targets.wheel]
packages = ["browsers_sdk"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.hatch.version]
path = "browsers_sdk/__init__.py"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true